--- a/A-Survey-Form/survey-form.html
+++ b/A-Survey-Form/survey-form.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Survey Form for Blog</title>
+    <link rel='stylesheet' href='styles.css'/>
   </head>
   <body>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <header class="header">
       <label>
       <h1 id="title">SaathOnline Survey Form</h1>
@@ -34,12 +36,12 @@
           required>
           <br>
 
-        <label id="number-label" for="age">
+        <label id="number-label" for="number">
           Age <span class="clue">(optional)</span>
         </label>
         <input
           type="number"
-          id="age"
+          id="number"
           min="10"
           max="99"
           name="age"
